tests melhorados